from 2 4.21 to 2.4.20
- removed sanity check that caused problem when writing an archive to a
  FUSE based filesystem.

from 2.4.19 to 2.4.20
- fixed display bug in dar_manager met when using -o option and adding
  options for dar that does not exist for dar_manager (like -R option)
- reactivating disabled (by mistake) optimization for some read-only dar
  manager database operations
- fixing compilation issue with dar against gcc 4.9.2
- fixing syntax error in dar_manager message
- fixing bug that avoided creating an archive at the root of the filesystem

from 2.4.18 to 2.4.19
- fixed missing quote in dar_par.dcf which is called by the par2 directive
- fixed bug in dar_manager's -u option, not displaying most recent files of
  an archive when they have been marked as removed in a more recent archive
  of the same dar_manager database.
- fixed bug met while restoring in sequential read mode a file having
  several copies (was modified at the time it was saved and retry-on-change
  was set).

from 2.4.17 to 2.4.18
- Initial Vector used for strong encryption was set with pseudo-random data
  generated using SHA1 message digest and blowfish cipher, which are not
  available when ligcrypt is running in FIPS mode. Since 2.4.18 we now use
  SHA256 and AES256 for IV assignment in order to have libdar compatible
  with FIPS mode. For data encryption nothing changes: the cipher specified
  (-K, -J, -$ options on CLI) are used as before.
- fixing bug met when performing archive isolation in sequential-read mode,
  If an archive corruption or truncated archive leads an inode to not have
  its CRC readable, dar aborts and issues a BUG report.
- updating list of project relying on dar/libdar

from 2.4.16 to 2.4.17
- fixing issue when case insensitive comparison was requested and invalid
  wide char for the current local was met in a filename. In such situation
  the corresponding file was never saved before (considering a filesystem