@@ -1,6 +1,8 @@
 from 2 4.21 to 2.4.20
 - removed sanity check that caused problem when writing an archive to a
   FUSE based filesystem.
+- fixed bug in dar_manager: archive permutation in database lead libdar
+  to check an archive number of range under certain circumstances
 
 from 2.4.19 to 2.4.20
 - fixed display bug in dar_manager met when using -o option and adding
